Fixed the issue with the dialog boxes appearing with patties above them sometimes by adding !important z-index setting in to the CSS.

--- a/style.css
+++ b/style.css
@@ -169,10 +169,6 @@ body {
 	margin-top: 1px;
 }
 
-#loginsBox {
-	float: left;
-}
-
 .popUp {
 	border: 2px solid black;
 	background-color: white;
@@ -328,4 +324,44 @@ body {
 	font-weight: bold;
 	text-transform: uppercase;
 	line-height: 42px;
+}
+
+#loginsBox {
+	width: 140px;
+}
+
+#customGoogleButton {
+	background-size: 100%;
+	background-image: url('images/googleplus.png');
+	float: left;
+	width: 30px;
+	height: 30px;
+}
+
+#customFBButton {
+	background-size: 100%;
+	background-image: url('images/facebook.png');
+	float: right;
+	width: 31px;
+	height: 31px;
+	cursor: hand;
+}
+
+#loginText {
+	float: left;
+	line-height: 30px;
+	font-weight: bold;
+	margin-right: 10px;
+}
+
+#logoutBox {
+	display: none;
+}
+
+#buffStore {
+	z-index: 10000;
+}
+
+.ui-dialog {
+	z-index: 1000 !important;
 }
